change path and fix update logic